--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Facebook URL fix",
-	"version": "1.3.1",
+	"version": "1.4",
 	"manifest_version": 2,
 
 	"description": "Shorten Facebook URLs to reduce tracking and unresponsive situations.",
@@ -34,7 +34,7 @@
 		"all_frames": true,
 		"run_at": "document_start",
 		"js": [ "fburlfix.logic.js", "fburlfix.content.js" ],
-		"matches": [ "http://*.facebook.com/*", "https://*.facebook.com/*" ]
+		"matches": [ "*://*.facebook.com/*" ]
 	}],
 
 	"homepage_url": "https://github.com/LQ2-apostrophe",
